--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>zkeenz.github.io</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h1>こんにちは！GitHub Pages 公開しました 🎉</h1>
-  <p>ここからポートフォリオやブログを育てていこう。</p>
+  <h1>ようこそ！zkeenz Pages 公開しました 🎉</h1>
+  <p>ここからポートフォリオを育てていきたい。</p>
 </body>
 </html>
